--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>bigboy</title>
 </head>
 <body>
-    <h1>sadsaddsa</h1>
+    <h1>600-700</h1>
 </body>
 </html>
