--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>600-700</h1>
     <a href="pages/about.html">
-        KOKOSIK725
+        KOKOSIK725-erebakan4ik
     </a>
 </body>
 </html>
