feat: added the class attribute with the subheading value for the h1 element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>bigboy</title>
 </head>
 <body>
-    <h1>600-700</h1>
+    <h1 class="subheading">600-700</h1>
     <a href="pages/about.html">
         KOKOSIK725-erebakan4ik
     </a>
