--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="title">600-700</h1>
     <a href="pages/about.html">
-        KOKOSIK725-erebakan4ik
+        KOKOSIK725-erebakan4ikdsfsdfsdfsdf
     </a>
 </body>
 </html>
